Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Library/Developer/CoreSimulator/Profiles/Runtimes/iOS.simruntime/Contents/Resources/RuntimeRoot/System/Library/Assistant/PrivateLearningPlugins/SiriPrivateLearningPatternExtractionPlugin.bundle/SiriPrivateLearningPatternExtractionPlugin
@(#)PROGRAM:SiriPrivateLearningPatternExtractionPlugin  PROJECT:SiriPrivateLearningAnalytics-1
ffffff
SiriPrivateLearningPatternExtractionPlugin
ExtractPatternsRectifi
FrequentPattern
ClosedPatternUtil
FeatureProcessing
AsrFeatureProcessing
NlxFeatureProcessing
UeiFeatureProcessing
PhoneCallFeatureProcessing
SmsFeatureProcessing
ItemSequenceHelper
ProcessedFeature
^@ItemSequenceFetching
ItemSequenceFetcher
ItemSequenceData
PatternItem
SequenceItem
EventType
Source
333?
PatternLogging
PatternLogger
ffffff
SiriPrivateLearningPatternExtractionPlugin
\contact-nickname
_TtC42SiriPrivateLearningPatternExtractionPlugin22ExtractPatternsRectifi
sequences
minSupport
minLength
maxLength
defaultTopK
result
closedPatternUtil
_TtC42SiriPrivateLearningPatternExtractionPlugin17ClosedPatternUtil
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20AsrFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20NlxFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20UeiFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper26PhoneCallFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20SmsFeatureProcessing
Donated from Siri: 
_TtC42SiriPrivateLearningPatternExtractionPlugin19ItemSequenceFetcher
biomeSignalReader
streamBookmarkStore
nlxFeatureExtractor
asrFeatureExtractor
ueiFeatureExtractor
interactionReader
secondsInADay
daysUnitNextRun
maximumTimeBetweenRestatements
maximumTimeWindowForFollowupEvents
com.apple.siri.plus.PatternsExtractionBookmark
Completed processing conversations in fetchRecentSequence. Computed a total of %ld sequences
Starting to process conversations in fetchRecentSequence
PatternExtractionPlugin fetchRecentSequence did not run because oldest conversation is still %f days old
Debug mode is on for RECTIFI. Running without bookmarking.
Oldest conversation relative day: %f
RECTIFIDebugModeEnabled
enableTelemetry=YES
UsageLoggingDisabled
com.apple.siri.plus
AnalyticsTelemetry
PatternExtraction
_TtC42SiriPrivateLearningPatternExtractionPlugin11PatternItem
timestamp
payload
source
type
_TtC42SiriPrivateLearningPatternExtractionPlugin12SequenceItem
timegap
entity
, relativeTimestampInMs: 
(relativeTimestampInMs: 
_TtC42SiriPrivateLearningPatternExtractionPlugin13PatternLogger
Omitting SELF logging call as UsageLoggingDisabled flag present
_TtC42SiriPrivateLearningPatternExtractionPlugin42SiriPrivateLearningPatternExtractionPlugin
sequenceFetcher
environmentFeatureFlags
patternLogger
similarityThreshold
similarityMinThreshold
topK
SiriPrivateLearningPatternExtractionPlugin.run() is skipped because context is %s
runPatternExtractionPlugin
Fetched %ld patterns from RECTIFI
Calling RECTIFI Algorithm
SiriPrivateLearningPatternExtractionPlugin.run() started
Fatal error
Down-casted Array element failed to match the target type
Expected 
NSArray element failed to match the Swift Array Element type
Expected 
[Error] Interval already ended
SiriPrivateLearningPatternExtractionPlugin.run() ended
SaySay
SnySiG
SaySi_SitGG
$s42SiriPrivateLearningPatternExtractionPlugin17FeatureProcessingP
ySSG
SdSg
$s42SiriPrivateLearningPatternExtractionPlugin20ItemSequenceFetchingP
SgtSg
SgtG
SgtGAC_G
SgtGACG
SgtG
SgAAIeghHngr_
ySdG
ySS_SbtG
SS_Sbt
ySS_SdSbtG
SS_SdSbt
ySSG
ySaySSGG
SaySSG
ySnySiGG
ySi_SitG
Si_Sit
SaySdG
$s42SiriPrivateLearningPatternExtractionPlugin0D7LoggingP
ySo38PLUSSchemaPLUSRECTIFIPatternConstraintCG
yyXlG
So8INIntentCm
ySo8INIntentCmG
ScPSg
Iegn_
ytIeghHr_
ySay
sequences
minSupport
minLength
maxLength
defaultTopK
result
closedPatternUtil
frequency
pattern
data
timeInterval
fromSiri
biomeSignalReader
streamBookmarkStore
nlxFeatureExtractor
asrFeatureExtractor
ueiFeatureExtractor
interactionReader
secondsInADay
daysUnitNextRun
maximumTimeBetweenRestatements
maximumTimeWindowForFollowupEvents
sequences
similarities
timestamp
payload
source
type
timegap
entity
SIRI
UNKNOWN
PHONEAPP
MESSAGEAPP
sequenceFetcher
environmentFeatureFlags
patternLogger
similarityThreshold
similarityMinThreshold
minSupport
topK
standardUserDefaults
boolForKey:
init
setConstraintValue:
setConstraintType:
initWithNSUUID:
setPlusId:
setPatternSequenceGenerated:
setEventMetadata:
sharedAnalytics
defaultMessageStream
emitMessage:isolatedStreamUUID:
addConstraints:
addSequence:
setRelativeTimestampInMs:
setItemSource:
setItemType:
setCdmMatchingSpanLabel:
setUufrSaidDialogIdentifier:
\contact-first
\contact-middle
\contact-last
@(#)PROGRAM:SiriPrivateLearningPatternExtractionPlugin  PROJECT:SiriPrivateLearningAnalytics-1
SiriPrivateLearningPatternExtractionPlugin
ExtractPatternsRectifi
FrequentPattern
ClosedPatternUtil
FeatureProcessing
AsrFeatureProcessing
NlxFeatureProcessing
UeiFeatureProcessing
PhoneCallFeatureProcessing
SmsFeatureProcessing
ItemSequenceHelper
ProcessedFeature
^@ItemSequenceFetching
ItemSequenceFetcher
ItemSequenceData
PatternItem
SequenceItem
EventType
Source
PatternLogging
PatternLogger
ffffff
SiriPrivateLearningPatternExtractionPlugin
\contact-nickname
_TtC42SiriPrivateLearningPatternExtractionPlugin22ExtractPatternsRectifi
sequences
minSupport
minLength
maxLength
defaultTopK
result
closedPatternUtil
_TtC42SiriPrivateLearningPatternExtractionPlugin17ClosedPatternUtil
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20AsrFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20NlxFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20UeiFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper26PhoneCallFeatureProcessing
_TtCO42SiriPrivateLearningPatternExtractionPlugin18ItemSequenceHelper20SmsFeatureProcessing
Donated from Siri: 
_TtC42SiriPrivateLearningPatternExtractionPlugin19ItemSequenceFetcher
biomeSignalReader
streamBookmarkStore
nlxFeatureExtractor
asrFeatureExtractor
ueiFeatureExtractor
interactionReader
secondsInADay
daysUnitNextRun
maximumTimeBetweenRestatements
maximumTimeWindowForFollowupEvents
com.apple.siri.plus.PatternsExtractionBookmark
Completed processing conversations in fetchRecentSequence. Computed a total of %ld sequences
Starting to process conversations in fetchRecentSequence
PatternExtractionPlugin fetchRecentSequence did not run because oldest conversation is still %f days old
Debug mode is on for RECTIFI. Running without bookmarking.
Oldest conversation relative day: %f
RECTIFIDebugModeEnabled
enableTelemetry=YES
UsageLoggingDisabled
com.apple.siri.plus
AnalyticsTelemetry
PatternExtraction
_TtC42SiriPrivateLearningPatternExtractionPlugin11PatternItem
timestamp
payload
source
type
_TtC42SiriPrivateLearningPatternExtractionPlugin12SequenceItem
timegap
entity
, relativeTimestampInMs: 
(relativeTimestampInMs: 
_TtC42SiriPrivateLearningPatternExtractionPlugin13PatternLogger
Omitting SELF logging call as UsageLoggingDisabled flag present
_TtC42SiriPrivateLearningPatternExtractionPlugin42SiriPrivateLearningPatternExtractionPlugin
sequenceFetcher
environmentFeatureFlags
patternLogger
similarityThreshold
similarityMinThreshold
topK
SiriPrivateLearningPatternExtractionPlugin.run() is skipped because context is %s
runPatternExtractionPlugin
Fetched %ld patterns from RECTIFI
Calling RECTIFI Algorithm
SiriPrivateLearningPatternExtractionPlugin.run() started
Fatal error
Down-casted Array element failed to match the target type
Expected 
NSArray element failed to match the Swift Array Element type
Expected 
[Error] Interval already ended
SiriPrivateLearningPatternExtractionPlugin.run() ended
SaySay
SnySiG
SaySi_SitGG
$s42SiriPrivateLearningPatternExtractionPlugin17FeatureProcessingP
ySSG
SdSg
$s42SiriPrivateLearningPatternExtractionPlugin20ItemSequenceFetchingP
SgtSg
SgtG
SgtGAC_G
SgtGACG
SgtG
SgAAIeghHngr_
ySdG
ySS_SbtG
SS_Sbt
ySS_SdSbtG
SS_SdSbt
ySSG
ySaySSGG
SaySSG
ySnySiGG
ySi_SitG
Si_Sit
SaySdG
$s42SiriPrivateLearningPatternExtractionPlugin0D7LoggingP
ySo38PLUSSchemaPLUSRECTIFIPatternConstraintCG
yyXlG
So8INIntentCm
ySo8INIntentCmG
ScPSg
Iegn_
ytIeghHr_
ySay
sequences
minSupport
minLength
maxLength
defaultTopK
result
closedPatternUtil
frequency
pattern
data
timeInterval
fromSiri
biomeSignalReader
streamBookmarkStore
nlxFeatureExtractor
asrFeatureExtractor
ueiFeatureExtractor
interactionReader
secondsInADay
daysUnitNextRun
maximumTimeBetweenRestatements
maximumTimeWindowForFollowupEvents
sequences
similarities
timestamp
payload
source
type
timegap
entity
SIRI
UNKNOWN
PHONEAPP
MESSAGEAPP
sequenceFetcher
environmentFeatureFlags
patternLogger
similarityThreshold
similarityMinThreshold
minSupport
topK
standardUserDefaults
boolForKey:
init
setConstraintValue:
setConstraintType:
initWithNSUUID:
setPlusId:
setPatternSequenceGenerated:
setEventMetadata:
sharedAnalytics
defaultMessageStream
emitMessage:isolatedStreamUUID:
addConstraints:
addSequence:
setRelativeTimestampInMs:
setItemSource:
setItemType:
setCdmMatchingSpanLabel:
setUufrSaidDialogIdentifier:
\contact-first
\contact-middle
\contact-last
